--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "*",
-    "axios-mock-adapter": "*",
+    "axios": "^1.3.5",
     "colors": "*",
     "cors": "*",
     "express": "^5.0.0-alpha.8",
     "jsonschema": "^1.4.1",
     "supertest": "*"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "axios-mock-adapter": "^1.21.4"
+  }
 }
